[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Font_Gunplay_34.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Font_Gunplay_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Font_Gunplay_42.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/GUI/ServerBrowser.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Main/Lobby/ServerListener.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Gui/ServerDisplay.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Searching"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Searching For Servers", "Searching For Servers.", "Searching For Servers..", "Searching For Servers..." ]
}

[node name="ServerBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
server_display_scene = ExtResource( 6 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 112.0
margin_right = -50.0
margin_bottom = -107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrowseLAN" type="Button" parent="BackgroundPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -255.99
margin_top = -101.973
margin_right = -42.9897
margin_bottom = -36.9729
rect_pivot_offset = Vector2( 275.87, 49.4547 )
custom_fonts/font = ExtResource( 1 )
text = "Browse LAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="BackgroundPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.9424
margin_top = -103.956
margin_right = 263.942
margin_bottom = -38.9561
rect_pivot_offset = Vector2( 275.87, 49.4547 )
custom_fonts/font = ExtResource( 1 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIP" type="LineEdit" parent="BackgroundPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -172.5
margin_right = 166.0
margin_bottom = -132.5
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Server IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroundPanel/ServerIP"]
anchor_right = 1.0
margin_left = -1.41418
margin_top = -48.0833
margin_right = -1.41418
margin_bottom = -3.08328
custom_fonts/font = ExtResource( 1 )
text = "Server IP"
align = 1

[node name="JoinServer" type="Button" parent="BackgroundPanel/ServerIP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.328
margin_top = 42.4533
margin_right = 103.672
margin_bottom = 107.453
rect_pivot_offset = Vector2( 275.87, 49.4547 )
custom_fonts/font = ExtResource( 1 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
visible = false
anchor_top = 0.0447205
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 52.0
margin_right = -44.0
margin_bottom = -103.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ServerSearch" type="Label" parent="BackgroundPanel/VBoxContainer"]
margin_right = 1085.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = ExtResource( 1 )
text = "Searching For Servers"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundPanel/VBoxContainer/ServerSearch"]
autoplay = "Searching"
playback_speed = 0.5
anims/Searching = SubResource( 1 )

[node name="BrowseServer" type="Label" parent="BackgroundPanel"]
anchor_right = 1.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "LAN Browser"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerListener" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="BackgroundPanel/BrowseLAN" to="." method="_on_BrowseLAN_pressed"]
[connection signal="pressed" from="BackgroundPanel/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="BackgroundPanel/ServerIP/JoinServer" to="." method="_on_JoinServer_pressed"]
[connection signal="new_server" from="ServerListener" to="." method="_on_ServerListener_new_server"]
[connection signal="remove_server" from="ServerListener" to="." method="_on_ServerListener_remove_server"]
